Implementig of PlaceContentProvier is left and the main core of app is also left i.e, geofence etc. In this commit contract class has been made and the databse (SqliteOpenHelper) is also created i.e, PlaceDbHelper. Implementation of the rest of the app will be done as of tomorrow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Sssh</string>
     <string name="action_delete">Delete a Location</string>
     <string name="settings">Settings</string>
+    <string name="Turn_on_off">Turn off Ssssh</string>
+    <string name="enable_loc_per">Enable Location Permission</string>
+    <string name="enable_ringer_per">Enable Ringer Permission</string>
 </resources>
