--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="enable_ringer_per">Enable Ringer Permission</string>
     <string name="need_locaiton_permission">First Give acess to Locaiton Permission. Go to settings
     by clicking on the Settings icon in the app bar!</string>
+    <string name="on_off">Switch it on, first!</string>
+    <string name="modes">Choose mode</string>
+    <string name="silent_mode">Silent mode</string>
+    <string name="vibrate_mode">Vibrate mode</string>
+
 </resources>
