--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="action_choose">Choose</string>
     <string name="name">Name of this Place</string>
     <string name="save">Save</string>
+    <string name="bundle_position_clicked">position_clicked</string>
 
 
 </resources>
